feat: Update version to 0.9.2-alpha and enhance CustomGameRule documentation